fix spacing

--- a/static/landing/assets/css/style.css
+++ b/static/landing/assets/css/style.css
@@ -103,11 +103,11 @@ img {
 }
 
 a {
-    color: #28f3c8;
+    color: #253992;
     -webkit-transition: all .2s;
     transition: all .2s;
 }
-a:hover { color: #28f3c8; }
+a:hover { color: #253992; }
 a,
 a:hover,
 a:active,
@@ -661,6 +661,7 @@ label input[type=radio] {
     -webkit-transition: background .3s;
     transition: background .3s;
     padding: 30px 0;
+    background-color: #253992;
     }
 
     .urgent-call span {
@@ -731,7 +732,7 @@ label input[type=radio] {
 }
 .main-header .header-menu > ul > li:hover > a, 
 .main-header .header-menu > ul > li.active > a {
-    color: #28f3c8;
+    color: #253992;
     font-weight: 400;
 }
 
@@ -1037,8 +1038,8 @@ label input[type=radio] {
 }
 
 .banner-text-inner .btn {
-    background: #28f3c8;
-    border-color: #28f3c8;
+    background: #253992;
+    border-color: #253992;
     color: #fff;
 }
 .banner-text-inner .btn:hover {
@@ -1175,12 +1176,12 @@ label input[type=radio] {
     right: -12%;
 }
 .main-header.inner-header.header-2 .btn:hover {
-    background: #28f3c8;
+    background: #253992;
     border-color: transparent;
 }
 
 .main-header.inner-header.header-2 .btn::before {
-    background: #28f3c8;
+    background: #253992;
 }
 .main-header.sticky {
     padding: 15px 0;
@@ -1269,9 +1270,9 @@ label input[type=radio] {
 }
 .gradient-bg {
     background: #5b39c9;
-    background: -webkit-linear-gradient(left, #5b39c9 0%,#28f3c8 100%);
-    background: linear-gradient(to right, #5b39c9 0%,#28f3c8 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b39c9', endColorstr='#28f3c8',GradientType=1 );
+    background: -webkit-linear-gradient(left, #5b39c9 0%,#253992 100%);
+    background: linear-gradient(to right, #5b39c9 0%,#253992 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b39c9', endColorstr='#253992',GradientType=1 );
 }
 
 /*===========================================
@@ -1318,7 +1319,7 @@ label input[type=radio] {
     margin-left: -150px;
 }
 .user-interact-inner .interact-icon svg#Capa_1 {
-    fill: #28f3c8;
+    fill: #253992;
 }
 .bg-2 {
     background: #f7f6f9;
@@ -1484,7 +1485,7 @@ section.app-video:before {
 .single-price-top span {
     font-size: 60px;
     font-weight: 200;
-    color: #28f3c8;
+    color: #253992;
     display: block;
     line-height: 40px;
 }
@@ -1546,7 +1547,7 @@ section.app-video:before {
 }
 .price--nav-inner .info-tabs a {
     padding: 10px 30px;
-    color: #28f3c8;
+    color: #253992;
     font-size: 14px;
     font-weight: 600;
     position: relative;
@@ -1573,7 +1574,7 @@ section.app-video:before {
 .price--nav-inner .info-tabs a.active {
     color: #fff;
     z-index: 1;
-    background: #28f3c8;
+    background: #253992;
 }
 .single-price-plan.active .btn {
     color: #fff;
@@ -1658,7 +1659,7 @@ section.app-video:before {
 }
 
 .single-author-comment p {
-    color: #28f3c8;
+    color: #253992;
     margin-bottom: 0;
 }
 /* =====================================================
@@ -1705,7 +1706,7 @@ section.app-video:before {
     color: #36324a;
 }
 .single-blog-inner .post-title h3:hover a{
-    color: #28f3c8;
+    color: #253992;
 }
 
 .single-blog-inner {
@@ -1725,7 +1726,7 @@ section.app-video:before {
 }
 
 .single-blog-inner .post-details a:hover{
-    color: #28f3c8;
+    color: #253992;
 }
 .post-details {
     padding: 47px 0 0 0;
@@ -1742,7 +1743,7 @@ section.app-video:before {
 }
 
 .single-blog-inner .post-info  a {
-    color: #28f3c8;
+    color: #253992;
     font-weight: 500;
     font-size: 14px;
     line-height: 1;
@@ -1756,7 +1757,7 @@ section.app-video:before {
     position: absolute;
     height: 2px;
     width: 2px;
-    background: #28f3c8;
+    background: #253992;
     left: -15px;
     bottom: 2px;
 }
@@ -1847,8 +1848,8 @@ section.app-video:before {
 
 .theme-pagination li.active a {
     color: #fff;
-    border-color: #28f3c8;
-    background: #28f3c8;
+    border-color: #253992;
+    background: #253992;
 }
 
 .theme-pagination li:last-child a, .theme-pagination li:first-child a {
@@ -1866,7 +1867,7 @@ section.app-video:before {
 }
 
 .theme-pagination li a:hover {
-    background: #28f3c8;
+    background: #253992;
     color: #fff;
 }
 
@@ -2097,7 +2098,7 @@ section.app-video:before {
     line-height: 1;
 }
 .social-list li a:hover {
-    color: #28f3c8;
+    color: #253992;
 }
 .post-tag-share {
     -webkit-box-pack: justify;
@@ -2198,7 +2199,7 @@ section.app-video:before {
 .comment-author-content h6 {
     font-size: 14px;
     margin-bottom: 34px;
-    color: #28f3c8;
+    color: #253992;
     font-weight: 400;
 }
 
@@ -2287,9 +2288,9 @@ section.app-video:before {
     margin-bottom: 80px;
 }
 .download-app-inner .btn {
-    border-color: #28f3c8;
+    border-color: #253992;
     color: #fff;
-    background: #28f3c8;
+    background: #253992;
     margin-bottom: 4px;
     font-size: 20px;
     font-weight: 600;
@@ -2329,7 +2330,7 @@ footer.footer {
 }
 .address-list li:hover span i,
 .widget-body .extra-link .link-right ul li a:hover, .widget-body .extra-link .link-left ul li a:hover {
-    color: #28f3c8;
+    color: #253992;
 }
 .footer-widget .footer-logo {
     margin-bottom: 38px;
@@ -2383,7 +2384,7 @@ footer.footer {
     font-size: 20px;
 }
 .social-icons li a:hover{
-    color: #28f3c8;
+    color: #253992;
 }
 .footer-post-details:after {
     height: 31px;
@@ -2414,7 +2415,7 @@ footer.footer {
 
 .twetter-post span {
     margin-right: 7px;
-    color: #28f3c8;
+    color: #253992;
     font-size: 20px;
 }
 .footer-post-details {
@@ -2496,10 +2497,10 @@ footer.footer {
     right: 0;
     bottom: 0;
     background: #5b39c9;
-    background: -webkit-linear-gradient(left, #28f3c8 0%, #5b39c9 100%);
-    background: -webkit-linear-gradient(left, #28f3c8 0%,#5b39c9 100%);
-    background: linear-gradient(to right, #28f3c8 0%,#5b39c9 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#28f3c8', endColorstr='#5b39c9',GradientType=1 );
+    background: -webkit-linear-gradient(left, #253992 0%, #5b39c9 100%);
+    background: -webkit-linear-gradient(left, #253992 0%,#5b39c9 100%);
+    background: linear-gradient(to right, #253992 0%,#5b39c9 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#253992', endColorstr='#5b39c9',GradientType=1 );
     opacity: .85;
 }
 .inner-header.sticky a.btn {
